--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div id="divreseaux">
             <a href="https://www.instagram.com/poilpuce/"><div id="instagram"><img id="imginstagram" src="images/icons/instagram.svg" alt="" height="220px" width="220px"/></div></a>
             <a href="https://www.youtube.com/c/poulposs"><div id="youtube"><img id="imgyoutube" src="images/icons/youtube.svg" alt="" height="220px" width="220px"/></div></a>
-            <a href="https://www.linkedin.com/in/paul-brilland-multim%C3%A9dia/"><div id="linkedin"><img id="imglinkedin" src="images/icons/linkedin.svg" alt="" height="220px" width="220px"/></div></a>
+            <a href="https://www.linkedin.com/in/paul-brilland/"><div id="linkedin"><img id="imglinkedin" src="images/icons/linkedin.svg" alt="" height="220px" width="220px"/></div></a>
             <a href="https://www.behance.net/poilpuce"><div id="behance"><img id="imgbehance" src="images/icons/behance.svg" alt="" height="220px" width="220px"/></div></a>
         </div>
     </section>
@@ -218,7 +218,7 @@
         <ul>
             <li><a href="https://www.instagram.com/poilpuce/"><div id="finstagram"><img id="imginstagramb" src="images/icons/instagramb.svg" alt="" height="40px" width="40px"/></div></a></li>
             <li><a href="https://www.youtube.com/c/poulposs"><div id="fyoutube"><img id="imgyoutubeb" src="images/icons/youtubeb.svg" alt="" height="40px" width="40px"/></div></a></li>
-            <li><a href="https://www.linkedin.com/in/paul-brilland-multim%C3%A9dia/"><div id="flinkedin"><img id="imglinkedinb" src="images/icons/linkedinb.svg" alt="" height="40px" width="40px"/></div></a></li>
+            <li><a href="https://www.linkedin.com/in/paul-brilland/"><div id="flinkedin"><img id="imglinkedinb" src="images/icons/linkedinb.svg" alt="" height="40px" width="40px"/></div></a></li>
             <li><a href="https://www.behance.net/poilpuce"><div id="fbehance"><img id="imgbehanceb" src="images/icons/behanceb.svg" alt="" height="40px" width="40px"/></div></a></li>
         </ul>
         <ul id="contactfooter">
