--- a/english.html
+++ b/english.html
@@ -15,15 +15,17 @@
 <body>
     <header>
         <a id="logo" href="#accueil">Paul BRILLAND</a>
-        <ul id="sectionsheader">            
-           <li class="headli"><a href="index.html">fr</a></li>
-           <li>|</li>
-           <li class="headli"><a href="#contact">Contact</a></li>
-           <li class="headli"><a href="#reseaux">Social Networks</a></li>
-           <li class="headli"><a href="#cv">Curriculum Vitæs</a></li>
-           <li class="headli"><a href="#creations">Creations</a></li>
-           <li class="headli" id="headpres"><a href="#presentation">Introduction</a></li> 
-        </ul>    
+        <nav>
+            <ul id="sectionsheader">            
+               <li class="headli"><a href="index.html">fr</a></li>
+               <li>|</li>
+               <li class="headli"><a href="#contact">Contact</a></li>
+               <li class="headli"><a href="#reseaux">Social Networks</a></li>
+               <li class="headli"><a href="#cv">Curriculum Vitæ</a></li>
+               <li class="headli"><a href="#creations">Creations</a></li>
+               <li class="headli" id="headpres"><a href="#presentation">Introduction</a></li> 
+            </ul>
+        </nav>  
     </header>
 
     <section id="accueil">
@@ -52,6 +54,8 @@
             </a>
         </div>
     </section>
+
+    <section class="separation"></section>
 
     <!-- <section id="transition">
         <div class="scroll text1">
@@ -107,6 +111,8 @@
         </div>
     </section>
 
+    <section class="separation"></section>
+
     <section id="creations">
         <h2 id="titre_creations">Creations</h2>
         <h3>Illustrations</h3>
@@ -154,8 +160,10 @@
 
     </section>
 
+    <section class="separation"></section>
+
     <section id="cv">
-        <h2 id="titre_cv">Curriculum Vitæs</h2>
+        <h2 id="titre_cv">Curriculum Vitæ</h2>
         <div id="containercv">
             <div class="containergif">
                 <div id="UIUX"><a href="downloads/CV Paul BRILLAND UIUX.pdf" download="CV Paul BRILLAND UI/UX Designer">UI/UX<br/> Designer</a></div>
@@ -166,17 +174,25 @@
             <div class="dl" id="dlUIUX"><a href="downloads/CV Paul BRILLAND UIUX.pdf" download="CV Paul BRILLAND UI/UX Designer">Download</a><img class="imgdl" src="images/icons/dl.svg" alt="" height="30px" width="30px"></div>
             <div class="dl" id="dlGraph"><a href="downloads/CV Paul BRILLAND Graphiste.pdf" download="CV Paul BRILLAND Designer Graphique"><p>Download</p></a><img class="imgdl" src="images/icons/dl.svg" alt="" height="30px" width="30px"></div>
         </div>
+        <div id="responsivecv">
+            <a href="downloads/CV Paul BRILLAND UIUX.pdf" download="CV Paul BRILLAND UI/UX Designer"><img class="miniacvresp" src="images/gallery/petit/UIUX.png"></a>
+            <a href="downloads/CV Paul BRILLAND Graphiste.pdf" download="CV Paul BRILLAND Designer Graphique"><img class="miniacvresp" src="images/gallery/petit/graphisme_eng.png"></a>
+        </div>
     </section>
+
+    <section class="separation"></section>
 
     <section id="reseaux">
         <h2 id="titre_reseaux">Social Networks</h2>
         <div id="divreseaux">
             <a href="https://www.instagram.com/poilpuce/"><div id="instagram"><img id="imginstagram" src="images/icons/instagram.svg" alt="" height="220px" width="220px"/></div></a>
             <a href="https://www.youtube.com/c/poulposs"><div id="youtube"><img id="imgyoutube" src="images/icons/youtube.svg" alt="" height="220px" width="220px"/></div></a>
-            <a href="https://www.linkedin.com/in/paul-brilland-multim%C3%A9dia/"><div id="linkedin"><img id="imglinkedin" src="images/icons/linkedin.svg" alt="" height="220px" width="220px"/></div></a>
+            <a href="https://www.linkedin.com/in/paul-brilland/"><div id="linkedin"><img id="imglinkedin" src="images/icons/linkedin.svg" alt="" height="220px" width="220px"/></div></a>
             <a href="https://www.behance.net/poilpuce"><div id="behance"><img id="imgbehance" src="images/icons/behance.svg" alt="" height="220px" width="220px"/></div></a>
         </div>
     </section>
+
+    <section class="separation"></section>
 
     <section id="contact">
         <h2 id="titre_contact">Contact</h2>
@@ -216,7 +232,7 @@
         <ul>
             <li><a href="https://www.instagram.com/poilpuce/"><div id="finstagram"><img id="imginstagramb" src="images/icons/instagramb.svg" alt="" height="40px" width="40px"/></div></a></li>
             <li><a href="https://www.youtube.com/c/poulposs"><div id="fyoutube"><img id="imgyoutubeb" src="images/icons/youtubeb.svg" alt="" height="40px" width="40px"/></div></a></li>
-            <li><a href="https://www.linkedin.com/in/paul-brilland-multim%C3%A9dia/"><div id="flinkedin"><img id="imglinkedinb" src="images/icons/linkedinb.svg" alt="" height="40px" width="40px"/></div></a></li>
+            <li><a href="https://www.linkedin.com/in/paul-brilland/"><div id="flinkedin"><img id="imglinkedinb" src="images/icons/linkedinb.svg" alt="" height="40px" width="40px"/></div></a></li>
             <li><a href="https://www.behance.net/poilpuce"><div id="fbehance"><img id="imgbehanceb" src="images/icons/behanceb.svg" alt="" height="40px" width="40px"/></div></a></li>
         </ul>
         <ul id="contactfooter">
