--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <li>|</li>
                <li class="headli"><a href="#contact">Contact</a></li>
                <li class="headli"><a href="#reseaux">Réseaux sociaux</a></li>
-               <li class="headli"><a href="#cv">Curriculum Vitæs</a></li>
+               <li class="headli"><a href="#cv">Curriculum Vitæ</a></li>
                <li class="active"><a href="#creations">Créations</a></li>
                <li class="headli" id="headpres"><a href="#presentation">Présentation</a></li> 
             </ul>   
@@ -54,6 +54,8 @@
             </a>
         </div>
     </section>
+
+    <section class="separation"></section>
 
     <!-- <section id="transition">
         <div class="scroll text1">
@@ -109,6 +111,8 @@
         </div>
     </section>
 
+    <section class="separation"></section>
+
     <section id="creations">
         <h2 id="titre_creations">Créations</h2>
         <h3>Illustrations</h3>
@@ -155,9 +159,11 @@
         </div>
 
     </section>
+    
+    <section class="separation"></section>
 
     <section id="cv">
-        <h2 id="titre_cv">Curriculum Vitæs</h2>
+        <h2 id="titre_cv">Curriculum Vitæ</h2>
         <div id="containercv">
             <div class="containergif">
                 <div id="UIUX"><a href="downloads/CV Paul BRILLAND UIUX.pdf" download="CV Paul BRILLAND UI/UX Designer">UI/UX<br/> Designer</a></div>
@@ -168,7 +174,13 @@
             <div class="dl" id="dlUIUX"><a href="downloads/CV Paul BRILLAND UIUX.pdf" download="CV Paul BRILLAND UI/UX Designer"><p>Télécharger</p></a><img class="imgdl" src="images/icons/dl.svg" alt="" height="30px" width="30px"></div>
             <div class="dl" id="dlGraph"><a href="downloads/CV Paul BRILLAND Graphiste.pdf" download="CV Paul BRILLAND Designer Graphique"><p>Télécharger</p></a><img class="imgdl" src="images/icons/dl.svg" alt="" height="30px" width="30px"></div>
         </div>
+        <div id="responsivecv">
+            <a href="downloads/CV Paul BRILLAND UIUX.pdf" download="CV Paul BRILLAND UI/UX Designer"><img class="miniacvresp" src="images/gallery/petit/UIUX.png"></a>
+            <a href="downloads/CV Paul BRILLAND Graphiste.pdf" download="CV Paul BRILLAND Designer Graphique"><img class="miniacvresp" src="images/gallery/petit/graphisme.png"></a>
+        </div>
     </section>
+
+    <section class="separation"></section>
 
     <section id="reseaux">
         <h2 id="titre_reseaux">Réseaux Sociaux</h2>
@@ -179,6 +191,8 @@
             <a href="https://www.behance.net/poilpuce"><div id="behance"><img id="imgbehance" src="images/icons/behance.svg" alt="" height="220px" width="220px"/></div></a>
         </div>
     </section>
+
+    <section class="separation"></section>
 
     <section id="contact">
         <h2 id="titre_contact">Contact</h2>
