--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <p>CEGEP De Matane (Matane, Canada)</p>
             </div>
             </a>
-            <a href="https://www.linkedin.com/in/paul-brilland-multim%C3%A9dia/">
+            <a href="https://www.parallele.ca/fr/clients/">
             <div class="textes" id="txt3">
-                <h3>Recherche d'un Stage</h3>
-                <p>Communication visuelle & UI/UX Design (Montréal/Québec, Canada)</p>
+                <h3>Stagiaire chez Parallèle</h3>
+                <p>Designer Graphique à Québec, Canada</p>
             </div>
             </a>
         </div>
