--- a/english.html
+++ b/english.html
@@ -48,8 +48,8 @@
             </a>
             <a href="https://www.linkedin.com/in/paul-brilland-multim%C3%A9dia/">
             <div class="textes" id="txt3">
-                <h3>Looking for a Traineeship</h3>
-                <p>Visual communication & UI/UX Design (Montréal/Québec, Canada)</p>
+                <h3>Intern at Parallèle</h3>
+                <p>Graphic Designer in Québec, Canada</p>
             </div>
             </a>
         </div>
